feat: add transaction sorting